[package]
name = "configs"
description = "An rust alternative to frequently used bash commands"
version = "0.1.0"
repository = "https://github.com/configs.rs"
authors = ["amar-jay <me@themanan.me>"]
edition = "2021"
license = "MIT"
readme = "./readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
colored = "2"
assert_cmd = "2"
predicates = "2"
